--- a/DAL Disconnected/DAL Disconnected.csproj
+++ b/DAL Disconnected/DAL Disconnected.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0BC6926D-D5F3-4B43-BEF1-34CF6C2A63E8}</ProjectGuid>
+    <ProjectGuid>{A32AF101-2179-473B-BA78-192F7F602B9A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BAL</RootNamespace>
-    <AssemblyName>BAL</AssemblyName>
+    <RootNamespace>DAL_Disconnected</RootNamespace>
+    <AssemblyName>DAL Disconnected</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,14 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UserBAL.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DAL Disconnected\DAL Disconnected.csproj">
-      <Project>{a32af101-2179-473b-ba78-192f7f602b9a}</Project>
-      <Name>DAL Disconnected</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
