--- a/BAL/BAL.csproj
+++ b/BAL/BAL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="UserBAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL Disconnected\DAL Disconnected.csproj">
